ssfl/static/sass/sst_styles.scss
@charset "utf-8";
@import url('https://fonts.googleapis.com/css?family=Nunito:400,700');


.imagecaption {             /* Make caption size fit figure (and figure css below) */
    padding: 3px;
    margin: 10px;
    float: left;
    border: 1px solid black;
}

.title {                /* prevent title overlapping nav bar */
    margin-top: 0.5rem;
}

button {
  padding: 4px;
}

.card-body {
  display: flex;
}
.card-title {
  margin-left: auto;
  //font-family: 'Helvetica', cursive;
  font-weight: bold;
  color: black;
}

@media(min-width:768px) {
  .card-title {
    word-break: break-all;
    text-align: center;
  }
}

@media(max-width:767px) {
  .card-title {
    text-align: center;
    word-break: break-all;
  }
}

.col-10 {
  height: 65px;
}

.col-2 {
  height: 65px;
}

